RandR/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-e90ea533-89c5-4761-af3b-4b2473c47e85
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
spec:
  selector:
    app: springboot-app-e90ea533-89c5-4761-af3b-4b2473c47e85
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
