RandR/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-e90ea533-89c5-4761-af3b-4b2473c47e85
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: springboot-app-e90ea533-89c5-4761-af3b-4b2473c47e85
spec:
  ingressClassName: nginx
  rules:
    - host: randr-b43rf8.2lksdx.us-east-2.febe.kbs
      http:
        paths:
          - backend:
              service:
                name: springboot-service-e90ea533-89c5-4761-af3b-4b2473c47e85
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-e90ea533-89c5-4761-af3b-4b2473c47e85
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
